# Studentmate

./: package-lock.json
docs/: WEBSOCKET_IMPLEMENTATION.md
studymate/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  QUICK_START.md  README.md  setup-local.bat  start.bat  start.sh  test-backend.bat
studymate/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  test_server.py
studymate/backend/alembic/: env.py
studymate/backend/alembic/versions/: 0001_initial.py  0002_add_user_table.py
studymate/backend/app/: main.py  schemas.py
studymate/backend/app/api/: auth.py  chat.py  crud.py  ingestion.py  search.py
studymate/backend/app/core/: auth.py  config.py
studymate/backend/app/crud/: base.py  user.py
studymate/backend/app/db/: models.py  session.py
studymate/backend/app/ingestion/: chunker.py  extractor.py  normalizer.py
studymate/backend/app/llm/: prompts.py  watsonx_client.py
studymate/backend/app/retrieval/: embeddings.py  index.py
studymate/backend/app/s3/: __init__.py  client.py
studymate/backend/studymate_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
studymate/backend/tests/: test_chunker.py  test_crud_api.py  test_embeddings.py  test_prompts.py  test_search.py
studymate/deploy/: docker-compose.yml
studymate/docs/: USAGE.md
studymate/frontend/: Dockerfile  README_REACT_QUERY.md  next.config.mjs  package-lock.json  package.json
studymate/frontend/app/: globals.css  layout.tsx  page.tsx
studymate/frontend/components/: Chat.tsx  DashboardLayout.tsx  (+3 more)
studymate/milestone3/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
(+24 files in other folders)
