[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studymate-backend"
version = "0.1.0"
description = "StudyMate backend services (FastAPI)"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "StudyMate", email = "dev@studymate.local" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.19",
  "boto3>=1.34.130",
  "minio>=7.2.7",
  "python-dotenv>=1.0.1",
  "faiss-cpu>=1.8.0.post1",
  "sentence-transformers>=3.0.1",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.2",
  "pymupdf>=1.24.4",
  "pdfminer.six>=20231228",
  "pypdf>=4.2.0",
  "ftfy>=6.2.0",
  "regex>=2024.5.15",
  "httpx>=0.27.0",
  "redis>=5.0.4",
  "orjson>=3.10.3",
  "sse-starlette>=2.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.1",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
  "types-requests>=2.32.0.20240523"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "ANN", "C4", "PIE", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = []



